chore: update feedback swagger docs
